--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,11 +16,47 @@
         android:transitionName="logo"
         android:src="@drawable/sw_logo"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mainList"
+    <Button
+        android:id="@+id/moviesButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/mainLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+        android:background="@color/colorAccent"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:textColor="@color/colorPrimary"
+        android:text="@string/movies" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/jediCard"
+        android:layout_below="@+id/moviesButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin">
+
+        <LinearLayout
+            android:id="@+id/jediCardLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/border"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/jediLogo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/testj"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                android:layout_gravity="end"
+                android:layout_margin="8dp"
+                android:textColor="@color/colorPrimary"
+                android:padding="8dp"
+                android:text="@string/jediText"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
